# BankSystem

./: CMakeLists.txt  Dockerfile  README.md
include/: Account.h  AccountDetailsScreen.h  App.h  AuthenticateScreen.h  Bank.h  FileFunctions.h  InputValidator.h  Menu.h  MenuScreen.h  Screen.h  ScreenUtils.h  TransactionsScreen.h  UpdateAccountScreen.h  file_functions.h
include/Screens/: AccountDetailsScreen.h  CreateAccountScreen.h  CustomersListScreen.h  MenuScreen.h  RemoveAccountScreen.h  Screen.h  ScreenUtils.h  TransactionsScreen.h  UpdateAccountScreen.h
scripts/: .build.sh.swp  build.sh  docker_run.sh
source/: Account.cpp  App.cpp  Bank.cpp  CMakeLists.txt  FileFunctions.cpp  InputValidator.cpp  Menu.cpp  file_functions.cpp  main.cpp
source/Screens/: AccountDetailsScreen.cpp  AuthenticateScreen.cpp  CreateAccountScreen.cpp  CustomersListScreen.cpp  MenuScreen.cpp  RemoveAccountScreen.cpp  Screen.cpp  ScreenUtils.cpp  TransactionsScreen.cpp  UpdateAccountScreen.cpp
src/: Menu.cpp  file_functions.cpp
test/: CMakeLists.txt  test.cc
